objects/My_Image__c/My_Image__c.object-meta.xml
<CustomObject>
    <description>Object to store picture with description, album and name</description>
    <label>My Image</label>
    <nameField>
        <label>Image</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>