objects/My_Image__c/fields/Album_number__c.field-meta.xml
<CustomField>
    <fullName>Album_number__c</fullName>
    <description>Album number from original data base</description>
    <label>Album number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>