objects/My_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39; + Picture_ID__c, Picture_ID__c, 20, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>