objects/My_Image__c/fields/Image_Number__c.field-meta.xml
<CustomField>
    <fullName>Image_Number__c</fullName>
    <description>Image numer from original data base</description>
    <label>Image Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>