objects/My_Image__c/fields/Miniature_Picture__c.field-meta.xml
<CustomField>
    <fullName>Miniature_Picture__c</fullName>
    <description>thumbnail URL for original pic</description>
    <label>Miniature Picture</label>
    <type>Url</type>
</CustomField>