objects/My_Image__c/fields/Picture_ID__c.field-meta.xml
<CustomField>
    <fullName>Picture_ID__c</fullName>
    <description>pic id from attachment</description>
    <label>Picture ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>