objects/My_Image__c/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <description>Original picture URL</description>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>