objects/My_Image__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39; + Thumbnail_ID__c, Thumbnail_ID__c, 20, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail</label>
    <type>Text</type>
</CustomField>