objects/My_Image__c/fields/Thumbnail_ID__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_ID__c</fullName>
    <description>Id of thumbnail attachment</description>
    <label>Thumbnail ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>