objects/My_Image__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Thumbnail__c</columns>
    <columns>Album_number__c</columns>
    <columns>Image__c</columns>
    <columns>Image_Number__c</columns>
    <columns>Picture_ID__c</columns>
    <columns>Picture_URL__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>